# wenjialu.github.io

./: CCN slides.htm  another_blog.html  guigui  guigui.html  homepage  index.html  myhomepage.html  myreading_steward  myreading_steward.html  search.xml  style.css  tutorials  web_for_cv.html  worthy_vedios  worthy_vedios.html
Hexo/: _config.yml  package-lock.json  package.json
Wenjia‘s Resume_files/: chromeextension.writer.underTools.html  css  css(1)  style.css
about/: me-1.html  me.html
archives/: index.html
archives/2020/: index.html
css/: base.css  font.css  font.scss  highlight-js.scss  paginator.scss  share-box.css  style.css
cv/: index.html  index_cn.html  package-lock.json  package.json  pmi.py
index.html/: index 2.html  index.html  index_cn.html  package-lock.json  package.json
index.html/Wenjia‘s Resume_files/: index.html
index.html/css/: ._grayscale.css  grayscale.css
index.html/cv/: index.html
index.html/img/: .bg-signup.jpg.icloud  .face.jpg.icloud  .fp2.JPG.icloud
index.html/index.html/: index.html  index_cn.html  watermark.py
index.html/js/: grayscale.js
index.html/projects/: data_analysis_with_algorithm.html
index.html/projects/Wenjia's AI/进阶/coupled-dynamical-systems-master/CDSExecution/: package.xml
index.html/projects/Wenjia's AI/进阶/coupled-dynamical-systems-master/CDSExecution/data/Models/Flipping/: flipping_masterGMM.txt
index.html/projects/Wenjia's AI/进阶/coupled-dynamical-systems-master/CDSExecution/data/Models/Swipping/: swipping_cplGMM.txt
index.html/projects_private/: 作图.ipynb
index.html/projects_to do/: dp基本操作.ipynb
index.html/readlist_ever/: detective推理； 本格 ；欧美； 本土.html  其他软件Reading list.html  对话 谈判 演讲 影响力.html  管理.html  绘画 | 设计 长草.html  英文原版书单.html  茨威格.html  运营 营销.html  适合单身者看的书单 恋爱.html
index.html/scss/: _comment.scss
index_version2_green.html/: index.html  package-lock.json
index_version2_green.html/css/: grayscale.css
myhomepage.html/: css  index.html
prog_learing_routine.html/: index.html
projects/: coursework_r.html
projects/Ossas_ChatBot-master/: readme.md
projects/Psychological-counseling-system-master/: README.md  pom.xml
projects/Wenjia's AI/进阶/coupled-dynamical-systems-master/GMR/: mainpage.dox  package.xml
projects/Wenjia's AI/进阶/coupled-dynamical-systems-master/GMR/include/: GMR.h
projects/coupled-dynamical-systems-master/CDS/: package.xml
projects/coursework_r.fld/: themedata.thmx
projects/crawler_psy/: .Rhistory
projects/docker image/: .dockerfile.txt.swp  dockerfile.rtf
projects/gradient_descent_viz-master/: .gradient_descent_visualization-macOS64bit.dmg.icloud
projects/交互可视化/: altair.ipynb
projects/吃鸡-数据分析/: .test_V2.csv.icloud  吃鸡-数据分析.ipynb  吃鸡-数据分析.ipynb的副本  吃鸡-数据测试.ipynb  绝地求生.pkl
projects_private/.ipynb_checkpoints/: keras做手写数字识别-checkpoint.ipynb
projects_private/spark_project/: run.sh  simpleapp.py  tset.py
projects_public/Wenjia's AI/coupled-dynamical-systems-master/CDS/: CMakeLists.txt
projects_public/Wenjia's AI/coupled-dynamical-systems-master/CDS/src/: CDSController.cpp
projects_public/Wenjia's AI/coupled-dynamical-systems-master/CDSExecution/: CMakeLists.txt
projects_public/Wenjia's AI/coupled-dynamical-systems-master/CDSExecution/data/Models/Flipping/: flipping_slaveGMM.txt
projects_public/Wenjia's AI/coupled-dynamical-systems-master/CDSExecution/data/Models/Reaching/: masterGMM.txt  reaching_masterGMM_Converged.mat
projects_public/Wenjia's AI/coupled-dynamical-systems-master/CDSExecution/data/Models/Swipping/: swipping_slaveGMM.txt
projects_public/Wenjia's AI/coupled-dynamical-systems-master/CDSExecution/include/: CDSExecution.h  kdl_epfl_conversions.hpp
projects_public/Wenjia's AI/coupled-dynamical-systems-master/CDSExecution/src/: CDSExecution.cpp  kdl_epfl_conversions.cpp
projects_public/Wenjia's AI/coupled-dynamical-systems-master/GMR/: CMakeLists.txt  gmr.in
projects_public/Wenjia's AI/coupled-dynamical-systems-master/GMR/include/: math_lib.h
projects_public/Wenjia's AI/coupled-dynamical-systems-master/GMR/src/: GMR.cpp  GMRDynamics.cpp  math_lib.c
projects_public/coursework_r.fld/: filelist.xml  header.html
projects_public/crawler_psy/: .RData  .Rapp.history  Reference.md  crawler_psy.Rmd
projects_to do/: nlp_autotag.ipynb
reading_process_omni.html/: index.html  styles.css
readlist_ever/: 14年香港大学50本书籍推荐.html  Reading list.html  design.html  discreet 、talking；brain；自控.html  discreet；brain 脑力.html  ebook电子书.html  index.html  ireader.html  kindle mate.html  东野圭吾，我心目中的日本推理小说之王是如何炼成的_.html  中医.html  书单 | 和《三体》同一水准的国外科幻小说推荐.html  买书 长草.html  人生 | 幸福 死亡 传记.html  人生 | 幸福 死亡.html  公司副总推荐的书单，我开始膜拜他了.html  关于理想、执行力、沟通技巧和理财的书籍有哪些推荐？.html  创建目录.html  历史 ★.html  奥尔罕·帕慕克.html  如何阅读弗洛伊德（刘森尧）.html  媒体 大众；社会.html  对话 谈判 演讲 影响力.html  建目录.html  弗罗依德.html  心理专业书.html  心理专业书| 心理怪谈.html  心理书 网站.html  思考中医.html  思辨 提问.html  报刊 评论.html  搜书.html  文学 小说 哲学 行为科学★ ★（文史哲开阔思想 而不局限于心理））.html  文学 小说 哲学★.html  昨夜的咖喱，明日的面包.html  爱默生.html  看看名家才知道，书应该这么读！.html  知乎问答：哪些书可以提高人的情商、判断力和谈话技巧？.html  社会 政治 行为科学★（文史哲开阔思想 而不局限于心理））.html  科幻 物理.html  (+20 more)
resume/: index.html
startbootstrap-grayscale-gh-pages/: index.html
startbootstrap-resume-gh-pages/: index.html
web_homepage/: index.html
worthy_vedios.html/: index.html  styles.css  worthy_vedios.txt
阅读进度.html/: index.html
(+429 files in other folders)
